Sort out pytorch build env

--- a/examples/BUILD
+++ b/examples/BUILD
@@ -10,3 +10,14 @@ cc_binary(
         "//mediapipe_addons:add_detections_calculator",
     ],
 )
+
+cc_binary(
+    name = "pytorch_inference",
+    deps = [
+        "@mediapipe//mediapipe/examples/desktop:demo_run_graph_main",
+        "@mediapipe//mediapipe/calculators/util:detections_to_render_data_calculator",
+        "@mediapipe//mediapipe/calculators/util:annotation_overlay_calculator",
+        "@mediapipe//mediapipe/calculators/core:flow_limiter_calculator",
+        "//mediapipe_addons:pytorch_inference_calculator",
+    ],
+)
