--- a/examples/BUILD
+++ b/examples/BUILD
@@ -8,6 +8,6 @@ cc_binary(
         "@mediapipe//mediapipe/calculators/util:annotation_overlay_calculator",
         "@mediapipe//mediapipe/calculators/core:flow_limiter_calculator",
         "@mediapipe//mediapipe/calculators/util:non_max_suppression_calculator",
-        "//mediapipe_addons:pytorch_inference_calculator",
+        "//mediapipe_pytorch:pytorch_inference_calculator",
     ],
 )
